Fixes, beginnings of proper translation system

--- a/lang/eng_GB.json
+++ b/lang/eng_GB.json
@@ -1,14 +1,12 @@
 {
     "language": "English",
     "region": "Great Britain",
-    "icon": {
-        "type": "ascii",
-        "ascii": "🇬🇧"
-    },
+    "icon": "🇬🇧",
     "tools": {
         "name": "Tools",
         "off": {
-            "aliases": "off",
+            "name": "off",
+            "aliases": [],
             "message": "Turning off now...",
             "error": "You're not permited to do this"
         }
