--- a/lang/eng_AU.json
+++ b/lang/eng_AU.json
@@ -1,14 +1,12 @@
 {
     "language": "English",
     "region": "Australia",
-    "icon": {
-        "type": "ascii",
-        "ascii": "🇦🇺"
-    },
+    "icon": "🇦🇺",
     "tools": {
         "name": "Tools",
         "off": {
-            "aliases": "off",
+            "name": "off",
+            "aliases": [],
             "message": "Turning off now...",
             "error": "You're not permited to do this"
         }
