--- a/lang/eng_AU.json
+++ b/lang/eng_AU.json
@@ -9,6 +9,22 @@
             "aliases": [],
             "message": "Turning off now...",
             "error": "You're not permited to do this"
+        },
+        "language": {
+            "name": "language",
+            "aliases": ["lang"],
+            "message": "Server language is set to: English (Australia)",
+            "list": {
+                "name": "list",
+                "aliases": ["l"],
+                "message": "Available languages"
+            },
+            "set": {
+                "name": "set",
+                "aliases": ["s"],
+                "message": "Server language got set to English (Australia)",
+                "error": "Choosen language isn't supported"
+            }
         }
     }
 }
