--- a/lang/eng_GB.json
+++ b/lang/eng_GB.json
@@ -22,7 +22,7 @@
             "set": {
                 "name": "set",
                 "aliases": ["s"],
-                "message": "Server language got set to English (Great Britain)",
+                "message": "Server language set to English (Great Britain)",
                 "error": "Choosen language isn't supported"
             }
         }
