--- a/lang/jpn_JP.json
+++ b/lang/jpn_JP.json
@@ -13,17 +13,17 @@
         "language": {
             "name": "language",
             "aliases": ["lang"],
-            "message": "Server language is set to: 日本語 (日本)",
+            "message": "サーバー言語は現在日本語（日本）設定にしています",
             "list": {
                 "name": "list",
                 "aliases": ["l"],
-                "message": "Available languages"
+                "message": "言語のリスト"
             },
             "set": {
                 "name": "set",
                 "aliases": ["s"],
-                "message": "Server language got set to 日本語 (日本)",
-                "error": "Choosen language isn't supported"
+                "message": "サーバー言語は日本語（日本）に設定されました",
+                "error": "選ばれた言語は現在サポートされていません"
             }
         }
     }
