Translated shout command and cleaned up some code

--- a/lang/eng_AU.json
+++ b/lang/eng_AU.json
@@ -25,6 +25,11 @@
                 "message": "Server language set to English (Australia)",
                 "error": "Choosen language isn't supported"
             }
+        },
+        "shout": {
+            "name": "shout",
+            "aliases": ["call"],
+            "message": "Hey {member.mention}, wake up!"
         }
     }
 }
