--- a/lang/eng_GB.json
+++ b/lang/eng_GB.json
@@ -25,6 +25,11 @@
                 "message": "Server language set to English (Great Britain)",
                 "error": "Chosen language isn't supported"
             }
+        },
+        "shout": {
+            "name": "shout",
+            "aliases": ["call"],
+            "message": "Hey {member.mention}, wake up!"
         }
     }
 }
