Italian translation and minor fixes to Polish one

--- a/lang/pol_PL.json
+++ b/lang/pol_PL.json
@@ -6,7 +6,7 @@
         "name": "Narzędzia",
         "off": {
             "name": "wyłącz",
-            "aliases": ["wylacz", "wył"],
+            "aliases": ["wylacz", "wył", "wyl"],
             "message": "Wyłączanie...",
             "error": "Nie jesteś do tego upoważniony"
         },
